--- a/Analysis/F2_EW_MainAnalysis.Rmd
+++ b/Analysis/F2_EW_MainAnalysis.Rmd
@@ -139,11 +139,11 @@ plot(density(data$endo), main="density-plot of endogeic abundance") # Outliers >
 ### Scatterplots for all pairs of environmental variables
 ```{r EnvironmentalPairplots,message=FALSE, warning=FALSE, echo=FALSE}
 # Choose interesting environmental parameters
-env.chosen <- data[,c("anc", "mc", "pH", "cn", "clay", "ats1", "ats2", "hum1", "dgN", "dgO")]
-env.chosen <- data[,c("anc", "ats1", "prec1","ats2", "hum2", "ata2", "prec2")]
-env.chosen <- data[,c("anc", "age_class", "samcam")]
-env.chosen <- data[,c("anc", "age_class", "dgO")]
-env.chosen <- data[,c("anc", "age_class", "location")]
+env.chosen <- data[,c("mc", "pH", "cn", "clay", "ats1", "ats2", "hum1", "prec1","dgN", "dgO", "anc")]
+env.chosen <- data[,c("ats1", "prec1","ats2", "hum2", "ata2", "prec2","anc")]
+env.chosen <- data[,c("age_class", "samcam","anc")]
+env.chosen <- data[data$cn<18,c("age_class", "ats1","cn", "c", "n","mc", "anc")]
+env.chosen <- data[,c("age_class", "location", "anc")]
 
 # Bivariate plots with histograms on the diagonal and smooth fitted curves
 pairs(env.chosen, lower.panel=panel.smooth, upper.panel=panel.cor, method="pearson", diag.panel=panel.hist, main= "Bivariate Plots with Histograms and smooth curves\n(pearson)")
@@ -541,7 +541,9 @@ boxplot(anc~field.ID+samcam, data, las=2, col="grey", main="Variability within s
 str(data)
 
 # Model Formulation
-anc.glob <- glmmadmb(anc ~ age_class*samcam + I(scl.mc^2) + scl.pH*scl.cn + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.glob1 <- glmmadmb(anc ~ age_class*samcam + scl.mc + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.glob2 <- glmmadmb(anc ~ age_class*samcam + I(scl.mc^2) + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+anc.glob3 <- glmmadmb(anc ~ age_class*samcam + I(scl.ats1^2) + scl.pH*scl.cn  +I(scl.hum1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
 # offsset is used due to the personal advice by T. Onkelinx:
 # You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model. 
 
@@ -556,12 +558,14 @@ Dispersion <- sum(E1^2)/(N-p)
 Dispersion
 
 # Multimodel averaging
-anc.dredge <- dredge(anc.glob)
+anc.dredge1 <- dredge(anc.glob1)
+head(anc.dredge3,10)
+head(anc.dredge2,10)
 head(anc.dredge,10)
 
 # The best model with both glmer() and glmmadmb():
 # anc.best <- glmer(anc ~ age_class*samcam + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
-anc.best <- glmmadmb(anc ~ age_class*samcam + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+anc.best <- glmmadmb(anc ~ age_class*samcam + I(scl.ats1^2) +  (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
 summary(anc.best)
 
 # glmer has less dispersion
@@ -1168,10 +1172,10 @@ ________________________________________________________________________________
 par(lo)
 
 # Variability within sites
-boxplot(endo~field.ID, data, col="grey", main="Variability within sites", xlab="sites orderd in decreasing age", ylab="anecic earthworm abundance")
+boxplot(endo2~field.ID, data, col="grey", main="Variability within sites", xlab="sites orderd in decreasing age", ylab="anecic earthworm abundance")
 
 # variability within sampling campaigns
-boxplot(endo~samcam, data,col="grey", main="Variability within sampling campaigns", xlab="seasons:\n autumn2012, spring2013, autumn2013", ylab="anecic earthworm abundance")
+boxplot(endo2~samcam, data,col="grey", main="Variability within sampling campaigns", xlab="seasons:\n autumn2012, spring2013, autumn2013", ylab="anecic earthworm abundance")
 
 # variability within sites and sampling campaigns
 boxplot(endo~field.ID+samcam, data, las=2, col="grey", main="Variability within sites \n differing at sampling campaigns", xlab="field+seasons", ylab="anecic earthworm abundance")
@@ -1186,7 +1190,9 @@ boxplot(endo~field.ID+samcam, data, las=2, col="grey", main="Variability within 
 str(data)
 
 # Model Formulation
-endo.glob <- glmmadmb(endo ~ age_class + samcam + I(scl.mc^2) + scl.pH*scl.cn + scl.ats1 + (1|field.ID) + offset(log(area)),data=data,family="nbinom")
+endo.glob1 <- glmmadmb(endo ~ age_class + samcam + scl.mc + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="nbinom")
+endo.glob1 <- glmmadmb(endo ~ age_class + samcam + I(scl.mc^2) + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="nbinom")
+endo.glob1 <- glmmadmb(endo ~ age_class + samcam + I(scl.ats1^2) + scl.pH*scl.cn + (1|field.ID) + offset(log(area)),data=data,family="nbinom")
 # offsset is used due to the personal advice by T. Onkelinx:
 # You better use an offset if you want to express the model in terms of m². Just add offset(log(0.25)) to the model. 
 
@@ -1200,27 +1206,196 @@ Dispersion <- sum(E1^2)/(N-p)
 Dispersion
 
 # Multimodel averaging
-endo.dredge <- dredge(endo.glob)
-head(endo.dredge,10)
+endo.dredge3 <- dredge(endo.glob)
+head(endo.dredge3,10)
 
 # The best model with both glmer() and glmmadmb():
 # endo.best <- glmer(endo ~ age_class*samcam + I(scl.ats1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
-endo.best <- glmmadmb(endo ~ age_class + samcam + scl.pH + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+endo.best <- glmmadmb(endo ~ age_class + samcam + scl.mc + scl.pH + (1|field.ID) + offset(log(area)) ,data=data,family="nbinom")
+endo.best <- glmer.nb(endo ~ age_class + samcam + scl.mc + scl.pH + (1|field.ID) + offset(log(area)) ,data=data)
 summary(endo.best)
 
-# glmer has less dispersion
+# glmer has less dispersion?
+endo.best <- glmer.nb(endo ~ age_class + samcam + scl.mc + scl.pH + (1|field.ID) + offset(log(area)) ,data=data)
 
-# A former "best model" with humidity as significant term and age_class as ordered factor
-# endo.best <- glmmadmb(endo ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
-# summary(endo.best)
 ````
 
-A former "best model" with humidity as significant term and age_class as ordered factor, found using dredge was
-anc.best <- glmmadmb(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID) + offset(log(area)) ,data=data,family="poisson")
+
+##### Model Validation
+```{r ModelValidation1_anc}
+summary(endo.best)
+summary(aov(endo.best))
+
+confint(endo.best)
+coefplot2(endo.best)
+
+
+## Model validation ####
+E1 <- resid(endo.best, type="pearson")
+F1 <- fitted(endo.best, type="response")
+
+# Dataset with all variables IN the model
+env1 <- cbind(E1, F1, data[,c("endo", "age_class", "samcam", "mc","pH")])
+# covariates NOT in the model
+env0 <- cbind(E1, F1,data[,c("ats1", "cn", "clay", "ats2", "hum1","dgO")])
+
+# plot residual versus all covariates in the model
+par(mfrow=c(3,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:length(env1)) {
+  scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
+  abline(h=0, lty=2, col="red")
+}
+par(mfrow=c(1,1))
+
+# plot residual versus all covariates NOT in the model
+par(mfrow=c(3,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:length(env0)) {
+  scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
+  abline(h=0, lty=2, col="red")
+}
+par(mfrow=c(1,1))
+
+# Overdispersion
+N <- nrow(data)
+p <- length(coef(endo.best)) +1 # The Plus "+1" used for determining the number of parameters(p) is due to the "k" of negative binomial distribution
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+#####
+
+overdisp_fun(endo.best)
+
+
+# Deviendoe
+logLik(endo.best) 
+
+# Fraction of explained variation in the response variable
+100*((endo.best$null.deviance-endo.best$deviance)/endo.best$null.deviance) # failed
+
+
+# Plots of Predicted Values
+par(mfrow=c(2,2))
+plot(data$age_class,predict(endo.best, type="response"))
+plot(data$samcam,predict(endo.best, type="response"))
+plot(data$mc,predict(endo.best, type="response"))
+plot(data$pH,predict(endo.best, type="response"))
+
+# Plots of fitted Values
+par(mfrow=c(2,2))
+plot(data$age_class,F1)
+plot(data$samcam,F1)
+plot(data$mc,F1)
+plot(data$pH,F1)
+
+par(lo)
+```
+
+Model validation 2
+```{r ModelValidation2_endo,fig.width=8, fig.height=7}
+# Model Validation 
+
+E <- resid(endo.best, type="pearson")
+
+par(mfrow=c(2,2))
+par(mar=c(5,5,2,3))
+plot(E~fitted(endo.best), ylab="Pearson Residuals", xlab="Fitted values") 
+abline(h=0, lty=2)
+hist(E, main = "", breaks = 20, cex.lab = 1.5, xlab = "Pearson Residuals")
+plot(E ~ data$age_class, ylab="Pearson Residuals", xlab="Age Class")
+abline(h=0, lty=2)
+plot(E ~ data$ats1, ylab="Pearson Residuals", xlab="Age Class")
+abline(h=0, lty=2)
+````
 
 
 
+##### Post-Hoc Multicomparisons
+```{r PostHocMulticomparisons_anc}
+# Pairwise comparisons
+endo.pairwise <- glht(endo.best, mcp(age_class = "Tukey"))
+endo.pw.ci <- confint(endo.pairwise)
 
+names(endo.pw.ci)
+endo.pw.sig <- which(endo.pw.ci$confint[,2]>0)
+data.frame(names(endo.pw.sig))
+
+
+# Plot Errorbars
+ggplot(endo.pw.ci, aes(y = lhs, x = exp(estimate), xmin = exp(lwr), xmax = exp(upr))) + 
+  geom_errorbarh() + 
+  geom_point() + 
+  geom_vline(xintercept = 1) +
+  mytheme
+
+# plot confidence intervals
+
+par(mar=c(2,15,2,2))
+plot(endo.pw.ci) # only maize is significantly different from all SIlphie fields. Within SIlphie there are no differences
+
+```
+
+##### Extract Predictions and plot predictions with error bars
+```{r ExtractPredicitons}
+endo.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.mc = mean(data$scl.mc),
+                     scl.pH = mean(data$scl.pH),
+                     area = 1)
+
+endo.pred <- cbind(endo.td, predict(endo.best, newdata = endo.td, interval = "confidence")) 
+
+data$samcam2 <-  data$samcam # duplicate variable samcam to change facet labels
+revalue
+
+
+ggplot(endo.pred, aes(x = age_class, y = exp(fit), ymin = exp(lwr), ymax = exp(upr))) + 
+  geom_bar(stat="identity",position = position_dodge(1), col="454545", fill="grey") +
+  geom_errorbar(position = position_dodge(1),col="black",width=0.15, size=0.15) + 
+  facet_grid(.~samcam) +
+  geom_hline(xintercept = 1) +
+  ylab("Abundance Ind./m²") +
+  xlab("Age Class") +
+  scale_x_discrete(labels=c("Cm", "Sp_Y", "Sp_I1", "Sp_I2", "Sp_O")) +
+  mytheme
+
+
+endo.pred <- within(endo.pred, {
+  AIC <- AIC(endo.best)
+  Rrandom <- summary(lm(fitted(endo.best)~ data$endo))$adj.r.squared
+  Rsquared <- summary(lm(predict(endo.best, type="response")~ data$endo))$adj.r.squared  
+})
+head(endo.pred)
+
+endo.stat = round(summary(endo.best)$coefficients[, c(3,4)],4)
+endo.coef = coeftab(endo.best)
+
+endo.env <- glmmadmb(endo ~ samcam + I(ats1^2) + (1|field.ID) + offset(log(area)),data=data,family="poisson")
+endo.pvalue <- anova(endo.env, endo.best)$"Pr(>Chi)"
+
+endo.OUT1 = endo.pred
+endo.OUT2 = cbind(endo.stat,endo.coef,LogLikP=endo.pvalue[2],fixef=fixef(endo.best))
+````
+
+```{r WriteOut}
+#write.table(anc.OUT1, "Predictions+Stats+ConfIntervals.csv", sep=";", append=TRUE)
+#write.table(anc.OUT2, "Predictions+Stats+ConfIntervals.csv", sep=";", append=TRUE)
+```
+
+```{r PredictionPlot2}
+anc.td = expand.grid(age_class=unique(data$age_class),
+                     samcam = unique(data$samcam),               
+                     scl.ats1 = seq(min(data$scl.ats1),max(data$scl.ats1), by=0.2),
+                     area = 1)
+
+anc.pred <- cbind(anc.td, predict(anc.best, newdata = anc.td, interval = "confidence")) 
+
+ggplot(anc.pred, aes(x = scl.ats1, y = exp(fit), ymin = exp(lwr), ymax = exp(upr),col=samcam)) + 
+  geom_errorbar(position = position_dodge(1)) + 
+  geom_point(position = position_dodge(1)) +
+  facet_grid(.~age_class) +
+  mytheme
+```
 
 
 
